# Regex_tester

./: meson.build
Regex_tester/: README.md
builddir/: build.ninja  compile_commands.json
builddir/meson-logs/: meson-log.txt
data/: gresource.xml
data/styles/: style.css
src/: Application.vala  Costants.vala  Main.vala
src/Objects/: MatchItem.vala
src/Widgets/: Header.vala  ListBoxItem.vala  Rectangle.vala  Window.vala
